Fix failing summary tests by adding summary sorting and start time